Home screen chapter section overlapping issue
+fixed

--- a/css/index.css
+++ b/css/index.css
@@ -353,6 +353,8 @@ ul.menu-sub{
 
 
 
+
+
 .chapter-nav{
 	text-align: center;
 }
@@ -504,6 +506,10 @@ ul.menu-sub{
 	
 	}
 
+	.right{
+		padding-top:5em;
+	}
+
 	/*Font Size*/
 	h1{
 		font-size: 40px;
@@ -585,6 +591,10 @@ ul.menu-sub{
 
 	.book{
 		width: 20%;
+	}
+
+	.right{
+		padding-top: 8em;
 	}
 
 
